--- a/.github/workflows/vulnerabilities.yaml
+++ b/.github/workflows/vulnerabilities.yaml
@@ -20,19 +20,22 @@ env:
   DEP_PATH: ./requirements.txt
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out main
-        uses: actions/checkout@master
-
-      - name: Security vulnerabilities scan
-        uses: aufdenpunkt/python-safety-check@master
-        with: 
-          scan_requirements_file_only: 'true'
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Check out main
+#        uses: actions/checkout@master
+#
+#      - name: Security vulnerabilities scan
+#        uses: aufdenpunkt/python-safety-check@master
+#        with: 
+#          scan_requirements_file_only: 'true'
 
   selftest:
     runs-on: ubuntu-latest
+    strategy:
+       matrix:
+          python-version: ["3.10"]
     steps:
       - uses: actions/checkout@v3
       - name: install
