--- a/.github/workflows/vulnerabilities.yaml
+++ b/.github/workflows/vulnerabilities.yaml
@@ -13,6 +13,7 @@ on:
       - main_*
       - bugfix_*
       - test_*
+      - issue_*
   pull_request:
     types: [opened, reopened, synchronize]
 
@@ -33,11 +34,10 @@ jobs:
 
   selftest:
     runs-on: ubuntu-latest
-    strategy:
-       matrix:
-          python-version: ["3.10"]
     steps:
       - uses: actions/checkout@v3
       - name: install
         run: python -m pip install .
       - uses: pypa/gh-action-pip-audit@v1.0.5
+        with:
+           no-deps:true
