#310 request summary at end of action and fix formatting for no-deps

--- a/.github/workflows/vulnerabilities.yaml
+++ b/.github/workflows/vulnerabilities.yaml
@@ -40,4 +40,5 @@ jobs:
         run: python -m pip install .
       - uses: pypa/gh-action-pip-audit@v1.0.5
         with:
-           no-deps:true
+          inputs: requirements.txt
+          no-deps: true
