--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-matplotlib==3.5.2
-scipy==1.8.1
-plotly==5.9.0
-xarray==2022.3.0
-netcdf4==1.6.0
-pyyaml==6.0
-kaleido>=0.2.1
-imageio==2.19.3
+imageio==2.25.0
 imutils==0.5.4
+kaleido>=0.2.1
+matplotlib==3.6.3
+metpy==1.4.0
+netcdf4==1.6.2
+numpy==1.24.2
+opencv-python>=4.7.0
+pandas==1.5.2
+pint==0.20.1
+plotly==5.13.0
+pytest>=7.2.1
+pyyaml==6.0
 scikit-image==0.19.3
-pint==0.19.2
-metpy==1.3.1
-pytest
-pandas==1.5.1
-opencv-python
+scipy==1.9.3  
+xarray==2023.1.0
+eofs==1.4.0
